<resources>
    <string name="app_name">PersonalLedger</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_expense_history">Expense History</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="version_1_0_beta">Version 1.0 Beta</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="date_and_time">Date and Time</string>
    <string name="submit">Submit</string>
    <string name="log_out">Log Out</string>
    <string name="hamburger_menu">Hamburger menu</string>
    <string name="loading">Loading…</string>
    <string name="straight_line">Straight Line</string>
    <string name="personal">Personal</string>
    <string name="ledger">Ledger</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="login_logo">Login logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-Mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="peer_id">Peer ID (if any)</string>
    <string name="type">Type (DEBIT/CREDIT)</string>
    <string name="label">Label</string>
    <string name="debit">DEBIT</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="personal_details">Personal Details</string>
    <string name="next">Next</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
</resources>
