<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.personalledger.ui.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.personalledger.ui.fragments.expense_history.ExpenseHistoryFragment"
        android:label="@string/menu_expense_history"
        tools:layout="@layout/fragment_expense_history" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.personalledger.ui.fragments.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.personalledger.ui.fragments.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>