<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="loginViewModel"
            type="com.nullbyte.personalledger.viewModel.LoginViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_150"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_32"
                android:contentDescription="@string/login_logo"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/personal"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/sp_40" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ledger"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/sp_40"
                android:translationY="-10dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_24"
                android:padding="@dimen/dp_16"
                android:text="@string/login"
                app:cornerRadius="@dimen/dp_32" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_24"
                android:padding="@dimen/dp_16"
                android:text="@string/sign_up"
                app:cornerRadius="@dimen/dp_32" />

            <ImageButton
                android:id="@+id/ib_google_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_16"
                android:src="@mipmap/ic_launcher_round"
                android:contentDescription="@string/google_sign_in" />

        </LinearLayout>

    </ScrollView>

</layout>