<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_16"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/dp_8"
    app:cardUseCompatPadding="true" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_amount_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/amount"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:hint="@string/loading"
            android:textSize="@dimen/sp_20"
            app:layout_constraintStart_toEndOf="@id/tv_amount_heading"
            app:layout_constraintEnd_toStartOf="@id/tv_date"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="@string/loading"
            android:textSize="@dimen/sp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_straight_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:src="@drawable/straight_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_amount_heading"
            android:contentDescription="@string/straight_line" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_margin="@dimen/dp_16"
            android:text="@string/loading"
            android:textSize="@dimen/sp_20"
            app:layout_constraintTop_toBottomOf="@id/iv_straight_line"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>